# MyFixedPoint_lib

./: CMakeLists.txt  README.md
headers/: MyFixedPoint.h  MyFixedPoint.hpp
